# disco-text

./: .gitignore  AGENTS.md  README.md  disco-text.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: app.py  discord_client.py  thread_manager.py  time_format.py  version.py
src/exporters/: md_exporter.py  txt_exporter.py
src/gui/: channel_panel.py  export_dialog.py  main_window.py  message_preview.py  onboarding_dialog.py  server_panel.py  styles.py
tests/: test_exporters.py  test_time_format.py
