[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disco-text"
version = "0.1.0"
description = "Discord channel text exporter with GUI"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3",
    "PyQt6>=6.6",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyinstaller",
]

[project.scripts]
disco-text = "src.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]